--- a/arteintuitiva.html
+++ b/arteintuitiva.html
@@ -107,7 +107,7 @@
                                 <a href="" class="dropdown-item">Telas</a>
                                 <a href="" class="dropdown-item">Mandalas</a>
                                 <a href="" class="dropdown-item">E-books</a>
-                                <a href="" class="dropdown-item">Outros</a>
+                                <a href="" class="dropdown-item">Others</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
@@ -116,7 +116,6 @@
                                 <a href="" class="dropdown-item">E-books</a>
                             </div>
                         </div>
-                        <a href="cursos.html" class="nav-item nav-link">Cursos</a>
                     </div>
                 </div>
             </nav>
