--- a/gallery.html
+++ b/gallery.html
@@ -107,15 +107,21 @@
                                 <a href="" class="dropdown-item">Telas</a>
                                 <a href="" class="dropdown-item">Mandalas</a>
                                 <a href="" class="dropdown-item">E-books</a>
-                                <a href="" class="dropdown-item">Outros</a>
+                                <a href="" class="dropdown-item">Others</a>
                             </div>
                         </div>
-                        <a href="cursos.html" class="nav-item nav-link">Cursos</a>
+                        <div class="nav-item dropdown">
+                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Otros</a>
+                            <div class="dropdown-menu rounded-0 m-0">
+                                <a href="" class="dropdown-item">E-books</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </nav>
         </div>
         <!-- Navbar End -->
+
 
         <!-- Watshap Start-->
         <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
