--- a/cursos.html
+++ b/cursos.html
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Otros</a>
+                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Others</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="" class="dropdown-item">E-books</a>
                             </div>
@@ -121,7 +121,6 @@
             </nav>
         </div>
         <!-- Navbar End -->
-
 
         <!-- Watshap Start-->
         <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
