--- a/gallery.html
+++ b/gallery.html
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Otros</a>
+                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Others</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="" class="dropdown-item">E-books</a>
                             </div>
