--- a/cursos.html
+++ b/cursos.html
@@ -116,6 +116,7 @@
                                 <a href="" class="dropdown-item">E-books</a>
                             </div>
                         </div>
+                        <a href="cursos.html" class="nav-item nav-link active">Cursos</a>
                     </div>
                 </div>
             </nav>
