--- a/arteintuitiva.html
+++ b/arteintuitiva.html
@@ -112,7 +112,7 @@
                         <div class="nav-item dropdown">
                             <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Others</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="" class="dropdown-item">E-books</a>
+                                <a href="" class="dropdown-item">Others</a>
                             </div>
                         </div>
                         <a href="cursos.html" class="nav-item nav-link active">Cursos</a>
@@ -121,50 +121,6 @@
             </nav>
         </div>
         <!-- Navbar End -->
-
-        <!-- Watshap Start-->
-        <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
-            onclick="window.location.href='https://wa.me/351932857248?text=.!%20.%20.%20.%20.%20.'">
-        <!-- Watshap End  -->
-
-        <!-- About Start -->
-        <div class="container-fluid header">
-            <div class="">
-                <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="">
-                        <img class="img-fluid w-100" src="img/about1.jpg">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid header">
-            <div class="align-center">
-                <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="">
-                        <img class="img-fluid w-100" src="img/about2.jpg">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid header">
-            <div class="align-center">
-                <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="">
-                        <img class="img-fluid w-100" src="img/about3.jpg">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid header">
-            <div class="align-center">
-                <div class="col-lg-9 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="">
-                        <img class="img-fluid w-100" src="img/about4.jpg">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- About End -->
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
