--- a/arteintuitiva.html
+++ b/arteintuitiva.html
@@ -101,7 +101,8 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery</a>
+                            <a href="gallery.html" class="nav-link dropdown-toggle"
+                                data-bs-toggle="dropdown">Gallery</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="" class="dropdown-item">Aguarelas</a>
                                 <a href="" class="dropdown-item">Telas</a>
@@ -121,6 +122,78 @@
             </nav>
         </div>
         <!-- Navbar End -->
+
+        <!-- Arte IntuitivaStart -->
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h1 class="text-center mb-3">Arte Intuitiva</h1>
+                    <p>“Uma Forma de Expressão Artística que surge de dentro para fora.”
+                        A Arte Intuitiva é uma forma de expressão criativa que flui da essência do indivíduo,
+                        transcendendo técnicas convencionais e normas estabelecidas.
+                        Ao invés de seguir regras rígidas, a arte intuitiva baseia-se na conexão profunda com as
+                        emoções, experiências e intuições pessoais do artista. É uma prática que reflete o interior e
+                        permite que a alma se comunique através de cores, formas, texturas e movimentos.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h4 class="text-justify mb-3">Por Definição</h4>
+                    <p>Arte intuitiva é um processo artístico que se desenvolve a partir da percepção interna, onde o
+                        artista se sente guiado pelas suas emoções e sentimentos. Esta forma de arte não é definida por
+                        um estilo específico ou pela técnica, mas sim pelo fluxo criativo que emerge do momento
+                        presente. A intuição actua como uma bússola, permitindo que o artista se expresse livremente.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h4 class="text-justify mb-3">O Meu Processo</h4>
+                    <p>O processo de criação na arte intuitiva é profundamente pessoal e pode variar de artista para
+                        artista. Geralmente, envolve algumas etapas, as minhas são:
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h4 class="text-justify mb-3">Preparação e Conexão</h4>
+                    <p>Recatar-me no meu espaço calmo e sereno para me conectar comigo mesma. Pode ser através da
+                        meditação, respiração profunda ou simplesmente a contemplação do silêncio, permitindo que os
+                        meus pensamentos e emoções fluam livremente.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h4 class="text-justify mb-3">Expressão sem Julgamento</h4>
+                    <p>Espalho todos os materiais artísticos que tenho à disposição — tintas , canetas, papel, pincéis ,
+                        telas … e simplesmente começo a criar sem um objetivo fixo. Cada movimento, cada cor escolhida é
+                        uma resposta à minha intuição do momento, levando-me a uma exploração espontânea.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h4 class="text-justify mb-3">Expressão sem Julgamento, </h4>
+                    <p>Espalho todos os materiais artísticos que tenho à disposição — tintas , canetas, papel, pincéis ,
+                        telas … e simplesmente começo a criar sem um objetivo fixo. Cada movimento, cada cor escolhida é
+                        uma resposta à minha intuição do momento, levando-me a uma exploração espontânea.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- Arte intuitiva End -->
 
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
