--- a/arteintuitiva.html
+++ b/arteintuitiva.html
@@ -185,11 +185,103 @@
         <div class="container-xxl py-0">
             <div class="container">
                 <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
-                    <h4 class="text-justify mb-3">Expressão sem Julgamento, </h4>
+                    <h4 class="text-justify mb-3">Expressão sem Julgamento</h4>
                     <p>Espalho todos os materiais artísticos que tenho à disposição — tintas , canetas, papel, pincéis ,
                         telas … e simplesmente começo a criar sem um objetivo fixo. Cada movimento, cada cor escolhida é
                         uma resposta à minha intuição do momento, levando-me a uma exploração espontânea.
                     </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h4 class="text-justify mb-3">Fluxo Criativo</h4>
+                    <p>À medida que me entrego a todo este processo, a criatividade flui livre e naturalmente. O meu
+                        foco é mais sobre o caminho que vou fazendo do que no resultado final. Essa libertação
+                        permite-me que emoções profundas e muitas vezes inconscientes venham à tona, proporcionando-me
+                        assim um espaço para a cura e autodescoberta.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h4 class="text-justify mb-3">Reflexão e Meditação, </h4>
+                    <p>Após o processo criativo, chamo-lhe a cereja no topo do bolo é o olhar , sentir e sentir mais do
+                        que uma vez, refletir e meditar sobre a obra criada, observar o que surgiu e como isso ressoa
+                        com as minhas emoções. Esta etapa é fundamental, pois permite-me a integração das experiências
+                        vividas durante o processo e uma compreensão mais profunda de mim mesma, sobre mim e o TODO.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h4 class="text-justify mb-3">A Utilidade da Arte Intuitiva</h4>
+                    <p>A arte intuitiva possui diversas utilidades significativas:
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h4 class="text-justify mb-3">Autoconhecimento</h4>
+                    <p>A prática da arte intuitiva promove um mergulho profundo no eu interior. Os artistas descobrem
+                        frequentemente aspectos ocultos na sua personalidade e enfrentam emoções que podem não estar
+                        acessíveis no seu dia a dia ou até em forma consciente.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h4 class="text-justify mb-3">Cura Emocional</h4>
+                    <p>A prática da arte intuitiva promove um mergulho profundo no eu interior. Os artistas descobrem
+                        frequentemente aspectos ocultos na sua personalidade e enfrentam emoções que podem não estar
+                        acessíveis no seu dia a dia ou até em forma consciente.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h4 class="text-justify mb-3">Expressão Livre</h4>
+                    <p>Para aqueles que se sentem limitados por expectativas sociais ou profissionais, a arte intuitiva
+                        oferece uma oportunidade de se libertar. É um meio de expressar a individualidade, permitindo
+                        que o artista se conecte com sua verdadeira essência sem restrições.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h4 class="text-justify mb-3">Conexão Comunitária/Social</h4>
+                    <p>Quando compartilhada, a arte intuitiva também pode criar conexões profundas entre as pessoas.
+                        A Arte intuitiva é uma caminhada fascinante e enriquecedora que vai além da simples criação
+                        visual ou estética É um mergulho nas nossas águas uma exploração interna que leva à descoberta
+                        do verdadeiro eu, permitindo que emoções e histórias sejam contadas de maneira única e
+                        significativa. Através desta prática, as pessoas podem voar, assim como o colibri, em direção à
+                        sua própria essência.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="container-xxl py-0">
+            <div class="container">
+                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                    <h4 class="text-justify mb-3">O que podes encontrar no Art Soul Colibri:</h4>
+                    <p>• Arte: Originais e Fine Art (reproduções)</p>
+                    <p>• Ebook’s para pintar</p>
+                    <p>• Cursos & Formação</p>
+                    <p>• Outros projectos</p>
+                    <p>Para mais informações/atualizações segue-me nas redes sociais Instragram, Facebook</p>
                 </div>
             </div>
         </div>
