--- a/arteintuitiva.html
+++ b/arteintuitiva.html
@@ -230,9 +230,9 @@
             <div class="container">
                 <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
                     <h4 class="text-justify mb-3">Cura Emocional</h4>
-                    <p>A prática da arte intuitiva promove um mergulho profundo no eu interior. Os artistas descobrem
-                        frequentemente aspectos ocultos na sua personalidade e enfrentam emoções que podem não estar
-                        acessíveis no seu dia a dia ou até em forma consciente.
+                    <p>Criar arte de maneira intuitiva pode ser uma forma poderosa de terapia. Muitas pessoas praticam
+                        esta prática para libertar tensões emocionais, traumas e stress, encontrando assim um caminho
+                        para a cura e a renovação.
                     </p>
                 </div>
             </div>
