--- a/arteintuitiva.html
+++ b/arteintuitiva.html
@@ -128,13 +128,12 @@
             <div class="container">
                 <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
                     <h1 class="text-center mb-3">Arte Intuitiva</h1>
-                    <p>“Uma Forma de Expressão Artística que surge de dentro para fora.”
-                        A Arte Intuitiva é uma forma de expressão criativa que flui da essência do indivíduo,
+                    <p>“Uma Forma de Expressão Artística que surge de dentro para fora.”</p>
+                    <p>A Arte Intuitiva é uma forma de expressão criativa que flui da essência do indivíduo,
                         transcendendo técnicas convencionais e normas estabelecidas.
                         Ao invés de seguir regras rígidas, a arte intuitiva baseia-se na conexão profunda com as
                         emoções, experiências e intuições pessoais do artista. É uma prática que reflete o interior e
-                        permite que a alma se comunique através de cores, formas, texturas e movimentos.
-                    </p>
+                        permite que a alma se comunique através de cores, formas, texturas e movimentos.</p>
                 </div>
             </div>
         </div>
