--- a/arteintuitiva.html
+++ b/arteintuitiva.html
@@ -128,7 +128,7 @@
             <div class="container">
                 <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
                     <h1 class="text-center mb-3">Arte Intuitiva</h1>
-                    <p>“Uma Forma de Expressão Artística que surge de dentro para fora.”</p>
+                    <p><i>“Uma Forma de Expressão Artística que surge de dentro para fora.”</i></p>
                     <p>A Arte Intuitiva é uma forma de expressão criativa que flui da essência do indivíduo,
                         transcendendo técnicas convencionais e normas estabelecidas.
                         Ao invés de seguir regras rígidas, a arte intuitiva baseia-se na conexão profunda com as
@@ -252,24 +252,12 @@
                 <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
                     <h4 class="text-justify mb-3">Conexão Comunitária/Social</h4>
                     <p>Quando compartilhada, a arte intuitiva também pode criar conexões profundas entre as pessoas.</p>
-                    <p>A Arte intuitiva é uma caminhada fascinante e enriquecedora que vai além da simples criação
+                    <p><i>Cursiva en HTMLA Arte intuitiva é uma caminhada fascinante e enriquecedora que vai além da simples criação
                         visual ou estética É um mergulho nas nossas águas uma exploração interna que leva à descoberta
                         do verdadeiro eu, permitindo que emoções e histórias sejam contadas de maneira única e
                         significativa. Através desta prática, as pessoas podem voar, assim como o colibri, em direção à
-                        sua própria essência.
+                        sua própria essência.</i>
                     </p>
-                </div>
-            </div>
-        </div>
-        <div class="container-xxl py-0">
-            <div class="container">
-                <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
-                    <h4 class="text-justify mb-3">O que podes encontrar no Art Soul Colibri:</h4>
-                    <p>• Arte: Originais e Fine Art (reproduções)</p>
-                    <p>• Ebook’s para pintar</p>
-                    <p>• Cursos & Formação</p>
-                    <p>• Outros projectos</p>
-                    <p>Para mais informações/atualizações segue-me nas redes sociais Instragram, Facebook</p>
                 </div>
             </div>
         </div>
