--- a/arteintuitiva.html
+++ b/arteintuitiva.html
@@ -252,7 +252,7 @@
                 <div class="text-justify  mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
                     <h4 class="text-justify mb-3">Conexão Comunitária/Social</h4>
                     <p>Quando compartilhada, a arte intuitiva também pode criar conexões profundas entre as pessoas.</p>
-                    <p><i>Cursiva en HTMLA Arte intuitiva é uma caminhada fascinante e enriquecedora que vai além da simples criação
+                    <p><i>Arte intuitiva é uma caminhada fascinante e enriquecedora que vai além da simples criação
                         visual ou estética É um mergulho nas nossas águas uma exploração interna que leva à descoberta
                         do verdadeiro eu, permitindo que emoções e histórias sejam contadas de maneira única e
                         significativa. Através desta prática, as pessoas podem voar, assim como o colibri, em direção à
